<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.ProfileActivity"
    android:background="@color/red_light">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_50sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ProfileUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/profile_user"
            android:drawableLeft="@drawable/ic_user_svgrepo_com__3_"
            android:drawablePadding="@dimen/_7sdp"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="@dimen/_7sdp"
            android:textSize="@dimen/_13ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:drawableLeft="@drawable/ic_email_svgrepo_com"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/profile_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_7sdp"
            android:textSize="@dimen/_13ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:hint="@string/profile_country"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/ProfileCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:inputType="none"
            android:textSize="@dimen/_13ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ProfileBirth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/profile_birth"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_date_svgrepo_com"
            android:drawablePadding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/RBG_Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ProfileMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_male"
            android:textSize="@dimen/_13ssp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/ProfileFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/profile_female"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/home_btn"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:text="@string/profile_save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_CQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:text="@string/count_ques"/>

            <TextView
                android:id="@+id/tv_CountQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_100sdp"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_CTQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:text="@string/count_true" />

            <TextView
                android:id="@+id/tv_countTQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_52sdp"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_CQF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:text="@string/count_false" />

            <TextView
                android:id="@+id/tv_countF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_62sdp"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>