<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Fragment.FillFragment"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/border_frag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:layout_gravity="center"
        android:text="1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/_8sdp" />


    <TextView
        android:id="@+id/FillTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/frag_title"/>

    <EditText
        android:id="@+id/FillAnswer"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fill_answer"
        android:textColor="@color/black"
        android:padding="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:text="@string/fill_check"
        android:background="@drawable/home_btn"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/white"
        android:id="@+id/CheckBtn"/>

</LinearLayout>