<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".Fragment.TrueFalseFragment"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/border_frag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:layout_gravity="center"
        android:text="1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginRight="@dimen/_8sdp" />

    <TextView
        android:id="@+id/FragTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_title"
        android:textSize="@dimen/_20ssp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_100sdp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp">

        <RadioButton
            android:id="@+id/RadioTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_true"
            android:textSize="@dimen/_13ssp"
            android:layout_marginRight="@dimen/_20sdp"/>

        <RadioButton
            android:id="@+id/RadioFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_false"
            android:textSize="@dimen/_13ssp"
            android:layout_marginLeft="@dimen/_20sdp"/>
    </RadioGroup>
</LinearLayout>